src/styles/src/styles.scss
$color-background:          1;
$color-text:                2;
$color-navbar-background:   3;
$color-navbar-foreground:   4;
$color-header:              5;
$color-link:                6;
$color-signature:           7;
$color-disabled:            8;
$color-code-background:     9;
$color-code-foreground:     10;
$color-input-background:    11;
$color-input-foreground:    12;
$color-input-border:        13;
$color-alert:               14;

$color-l-background: #F5F5F9;
$color-l-text: #181818;
$color-l-navbar-background: #222222;
$color-l-navbar-foreground: #97AEE7;
$color-l-header: #4444FF;
$color-l-link: #3961C6;
$color-l-signature: #3961C6;
$color-l-disabled: #707070;
$color-l-code-background: #e0e0e0;
$color-l-code-foreground: $color-l-text;
$color-l-input-background: #ffffff;
$color-l-input-foreground: $color-l-text;
$color-l-input-border: #c5c5c5;
$color-l-alert: #d00000;

$color-d-background: #282828;
$color-d-text: #F5F5F5;
$color-d-navbar-background: #222222;
$color-d-navbar-foreground: #97AEE7;
$color-d-header: #5E87eD;
$color-d-link: #97AEE7;
$color-d-signature: #97AEE7;
$color-d-disabled: #BBBBBB;
$color-d-code-background: #080808;
$color-d-code-foreground: $color-d-text;
$color-d-input-background: #1A1A1A;
$color-d-input-foreground: $color-d-text;
$color-d-input-border: #404040;
$color-d-alert: #FF4D4D;

$colors-light: $color-l-background $color-l-text $color-l-navbar-background $color-l-navbar-foreground $color-l-header $color-l-link $color-l-signature $color-l-disabled $color-l-code-background $color-l-code-foreground $color-l-input-background $color-l-input-foreground $color-l-input-border $color-l-alert;
$colors-dark:  $color-d-background $color-d-text $color-d-navbar-background $color-d-navbar-foreground $color-d-header $color-d-link $color-d-signature $color-d-disabled $color-d-code-background $color-d-code-foreground $color-d-input-background $color-d-input-foreground $color-d-input-border $color-d-alert;

$navbar-height: 3rem;

$sidebar-width: 25%;

@mixin themed-color($prop, $color-index, $important: 0) {
    $importantStr: ();
    @if $important == 1 {
        $importantStr: !important;
    }

    // fallback
    #{$prop}: nth($colors-light, $color-index) $importantStr;

    @media (prefers-color-scheme: light),
           (prefers-color-scheme: no-preference) {
        #{$prop}: nth($colors-light, $color-index) $importantStr;
    }

    @media (prefers-color-scheme: dark) {
        #{$prop}: nth($colors-dark, $color-index) $importantStr;
    }
}

body {
    font-family: "Lato", "Segoe UI", Calibri, Ubuntu, sans-serif;
    font-size: 13pt;
    @include themed-color('color', $color-text);
    @include themed-color('background-color', $color-background);
}

a {
    text-decoration: none;
}

pre, code {
    @include themed-color('background-color', $color-code-background);
    @include themed-color('color', $color-code-foreground);
}

pre {
    overflow: auto;

    code {
        background-color: inherit;
    }
}

button, input[type=button] {
    border: none;
    outline: none;
    cursor: pointer;
    padding-left: 1.2rem;
    padding-right: 1.2rem;
    padding-top: 0.6rem;
    padding-bottom: 0.6rem;
    box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.4);
    font-size: 1rem;
    background-color: #999999;
    color: white;

    &::-moz-focus-inner {
        border: none;
    }

    .fa-spin {
        font-size: 1.1rem;
        margin-left: 0.6rem;
    }

    &.btn-primary {
        background-color: #1f6cff;

        &[disabled=disabled] {
            cursor: default;
            background-color: #5792ff;
        }
    }

    >.fa-spin {
        display: none;
    }

    &[disabled=disabled] > .fa-spin {
        display: inline-block;
    }
}

input[type=text], input[type=password], input[type=date], input[type=datetime-local], input[type=email],
        input[type=url] {
    @include themed-color('background-color', $color-input-background);
    @include themed-color('color', $color-input-foreground);
    @include themed-color('border-color', $color-input-border);
    @include themed-color('border-color', $color-input-border);
    height: 2.55em;
    border-radius: 0.5em;
    border-style: solid;
    border-width: 1px;
}

// utility classes

.pseudo-link {
    @include themed-color('color', $color-link);
    cursor: pointer;
}

// /utility classes

// navbar

#navbar {
    display: flex;
    flex-direction: row;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: $navbar-height;
    @include themed-color('background-color', $color-navbar-background);
    @include themed-color('color', $color-navbar-foreground);
    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.7);

    #navbar-title {
        flex-grow: 0;
        flex-shrink: 0;
        margin-left: 1.5rem;
        margin-top: 0.25rem;
        font-size: 2rem;

        a {
            @include themed-color('color', $color-navbar-foreground);
        }
    }

    .spacer {
        flex-grow: 1;
        flex-shrink: 1;
    }

    #navbar-links {
        flex-grow: 0;
        flex-shrink: 0;
        float: right;

        .navbar-link {
            float: left;
            height: $navbar-height;
            padding-left: 1.4rem;
            padding-right: 1.4rem;
            cursor: pointer;

            &.link-icon {
                font-size: 2rem;
                line-height: 3.1rem;
            }

            &.link-text {
                font-size: 1.1rem;
                line-height: 2.9rem;
            }

            &:hover {
                background-color: black;
            }

            a {
                width: 100%;
                height: 100%;
                color: inherit;
                text-decoration: none;
            }
        }
    }
}

// /navbar

// page content

#container {
    margin-left: auto;
    margin-right: auto;

    @media (max-width: 1000px) {
        width: 100%;
    }

    @media (min-width: 1001px) {
        width: 60rem;
    }
}

#page-body {
    display: flex;
    flex-direction: row;
    margin-top: 5rem;
    margin-bottom: 2rem;

    * {
        flex-shrink: 0;
    }

    a {
        text-decoration: none;
        @include themed-color('color', $color-link);
    }
}

// /page content

// main content

#main-content {
    width: calc(#{100% - $sidebar-width} - 1rem);
    padding-right: 1.5rem;
}

.header {
    font-size: 1.5rem;
    @include themed-color('color', $color-header);
    margin-bottom: 1rem;

    a {
        color: inherit !important;
    }
}

.form-section {
    &:not(:last-child) {
        margin-bottom: 0.8rem;
    }

    &.form-error {
        @include themed-color('color', $color-alert);
        max-width: 60%;
    }

    .form-label {
        display: block;
        font-size: 0.9rem;

        &.required::after {
            content: '*';
            padding-left: 0.1rem;
            @include themed-color('color', $color-alert);
        }
    }

    input[type=text], input[type=password] {
        width: 60%;
    }

    #edit-content-input {
        width: 100%;
        max-width: 100%;
        height: 35rem;
    }
}

#post-previews {
    margin-bottom: 1rem;
}

.post {
    &:not(:last-child) {
        border-bottom-style: solid;
        border-bottom-width: 1px;
        @include themed-color('border-bottom-color', $color-text);
        margin-bottom: 1rem;
        padding-bottom: 1rem;
    }

    .post-header {
        @extend .header;
    }

    .post-footer {
        .post-signature {
            @include themed-color('color', $color-signature);
            text-align: right;
            margin-bottom: 0.8rem;
        }

        .post-controls {
            text-align: right;

            .post-controls-section {
                &:not(:last-child) {
                    margin-bottom: 0.2rem;
                }

                .post-control {
                    &:not(:last-child) {
                        margin-right: 0.8rem;
                    }
                }
            }
        }
    }
}

#pager {
    text-align: center;

    .pager-label {
        margin-left: 0.4rem;
        margin-right: 0.4rem;
    }

    .pager-control {
        font-size: 1.6rem;
        user-select: none;

        &:not(:first-child) {
            margin-left: 0.2rem;
        }

        &:not(:last-child) {
            margin-right: 0.2rem;
        }

        &.disabled {
            @include themed-color('color', $color-disabled);
            color: #707070;
        }

        a {
            @include themed-color('color', $color-header);
        }
    }
}

// /main content

// sidebar

#sidebar {
    width: $sidebar-width;
    margin-bottom: 1rem;

    .sidebar-section {
        .sidebar-header {
            @extend .header;
            margin-bottom: 0.6rem;
        }

        .sidebar-content {
            margin-left: 1rem;
        }

        &:not(:last-child) {
            margin-bottom: 1rem;
        }

        .sidebar-link {
            margin-left: 0.3rem;
            line-height: 1.2rem;

            &:not(:last-child) {
                margin-bottom: 0.2rem;
            }
        }

        #post-list {
            list-style: circle;
            padding: 0;
            margin: 0;

            li {
                padding: 0;
                margin-left: 0.5rem;
                margin-bottom: 0.5rem;

                &.older {
                    display: none;
                }
            }

            &.expanded {
                .older {
                    display: list-item;
                }
            }
        }

        #recent-control {
            margin-left: -1rem;
        }

        #archive-container {
            .archive-year {
                margin-bottom: 0.4rem;

                .archive-year-label {
                    cursor: pointer;

                    .archive-year-expander {
                        width: 0.6rem;

                        &.fa-caret-down {
                            margin-left: -0.2rem;
                            margin-right: 0.2rem;
                        }
                    }
                }

                .archive-year-body {
                    margin-left: 0.5rem;
                }

                &.collapsed {
                    .archive-year-body {
                        display: none;
                    }
                }
            }

            ul {
                margin: 0;
                padding-left: 1rem;
            }
        }

        #external-links {
            .sidebar-link {
                margin-bottom: 0.5rem;
            }
        }
    }
}

// /sidebar

// footer

#page-footer {
    width: 100%;
    text-align: center;
    border-top-style: solid;
    border-top-width: 1px;
    @include themed-color('border-top-color', $color-text);
    padding-top: 1rem;
    margin-bottom: 1rem;

    a {
        @include themed-color('color', $color-link);
    }

    .footer-section:not(:last-child) {
        margin-bottom: 0.8rem;
    }

    .spacer {
        display: inline-block;
        width: 3rem;
    }
}

// /footer

